--- a/rooms.html
+++ b/rooms.html
@@ -41,7 +41,7 @@
                 <span class="glyphicon glyphicon-home"></span> Home</a>
             </li>
             <li>
-              <a href="#">
+              <a href="./location.html">
                 <span class="glyphicon glyphicon-map-marker"></span><br class="hidden-xs"> Location</a>
             </li>
             <li class="active">
@@ -49,7 +49,7 @@
                 <span class="glyphicon glyphicon-bed"></span><br class="hidden-xs"> Structure</a>
             </li>
             <li>
-              <a href="#">
+              <a href="./decor.html">
                 <span class="glyphicon glyphicon-lamp"></span><br class="hidden-xs"> Design</a>
             </li>
             <li>
@@ -163,7 +163,7 @@
           <p>“The thrill of coming home has never changed.”</p>
         </section>
       </div>
-      <div id="copy" class="text-center">&copy; Copyright Diana Kirillova 2020</div>
+      <div id="copy" class="text-center">&copy; Copyright Diana Kirillova 2023</div>
     </div>
   </footer>
 
